--- a/websocket聊天小案例/websocket实现消息发送与接收.html
+++ b/websocket聊天小案例/websocket实现消息发送与接收.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>websocket实现消息发送与接收</title>
+    <title>websocket实现小聊天</title>
 </head>
 <body>
-    <h1>Echo text</h1>
+    <h1>Chat Room</h1>
     <input type="text" id="sendTxt">
     <button id="sendBtn">发送</button>
     <div id="recv"></div>
